fixed bug that made cards not look good on mobile by editing the padding

--- a/styles/team.scss
+++ b/styles/team.scss
@@ -32,7 +32,8 @@ q{
 //CSS for the Team Cards//
 .cards-team{
   background-color: $clr-white;
-  padding: 5rem;
+  padding: 1rem;
+  margin-top: 2rem;
   text-align: center;
 }
 .card-footer{
